editor.js (pre-alpha 0.16),and keyboard.js

--- a/engine/editor/demo.html
+++ b/engine/editor/demo.html
@@ -137,152 +137,14 @@
 
 		<script src="/ecs/engine/Enviroment.js"></script>
 		<script src="/ecs/engine/core/entity.js"></script>
+		<script src="/ecs/engine/core/helpers.js"></script>
 		<script src="/ecs/engine/core/localPlayer.js"></script>
 		<script src="/ecs/engine/core/cameraControls.js"></script>
 		<script src="/ecs/engine/core/keyboardState.js"></script>
 		<script src="/ecs/engine/core/keyInputControls.js"></script>
 		<script src="/ecs/engine/core/joystickControls.js"></script>
+		<script src="/ecs/engine/core/keyboard.js"></script>
 		<script src="/ecs/engine/editor/EditorTab.js"></script>
-		<script src="/ecs/engine/editor/editor.js"></script>
-
-		<script>
-
-		//	Global helpers.
-
-			Number.prototype.format = function (){
-				return this.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1,");
-			};
-
-		//	save_file.js
-			function saveString( text, filename ) {
-				save( new Blob( [ text ], { type: "text/plain" } ), filename );
-			}
-
-			function saveArrayBuffer( buffer, filename ) {
-				save( new Blob( [ buffer ], { type: "application/octet-stream" } ), filename );
-			}
-
-			function save( blob, filename ) {
-
-				var link = document.createElement( "a" );
-				link.href = URL.createObjectURL( blob );
-				link.download = filename || "untitled";
-				link.click();
-
-			}
-
-		//	round.js
-			function round(number, precision) {
-				var shift = function (number, precision, reverseShift) {
-					if (reverseShift) {
-						precision = -precision;
-					}  
-					numArray = ("" + number).split("e");
-					return +(numArray[0] + "e" + (numArray[1] ? (+numArray[1] + precision) : precision));
-				};
-				return shift(Math.round(shift(number, precision, false)), precision, true);
-			}
-
-		//	array_move.js
-			function array_move( arr, old_index, new_index ){
-
-				if (new_index >= arr.length) {
-					var k = new_index - arr.length + 1;
-					while (k--) {
-						arr.push(undefined);
-					}
-				}
-
-				arr.splice(new_index, 0, arr.splice(old_index, 1)[0]);
-			}
-
-		//	deep_copy.js
-			function deepCopy(obj) {
-				if (Object.prototype.toString.call(obj) === "[object Array]") {
-					var out = [], i = 0, len = obj.length;
-					for ( ; i < len; i++ ) {
-						out[i] = arguments.callee(obj[i]);
-					}
-				//	console.log("out:", out);
-					return out;
-				}
-				if (typeof obj === "object") {
-					var out = {}, i;
-					for ( i in obj ) {
-						out[i] = arguments.callee(obj[i]);
-					}
-				//	console.log("out:", out);
-					return out;
-				}
-				return obj;
-			}
-
-			function copyObject(obj) {
-
-			//	1. copy has same prototype as orig
-				var copy = Object.create(Object.getPrototypeOf(obj));
-
-			//	2. copy has all of orig’s properties
-				copyOwnPropertiesFrom(copy, obj);
-
-				return copy; // warning: shallow copy!
-
-			//	The properties are copied from orig to copy via this function:
-
-				function copyOwnPropertiesFrom(target, source) {
-					Object.getOwnPropertyNames(source).forEach(function(propKey) {
-						var desc = Object.getOwnPropertyDescriptor(source, propKey);
-						Object.defineProperty(target, propKey, desc);
-					});
-					return target;
-				};
-
-			}
-
-		//	three-quaternion-from-normal.
-		//	Builds a ThreeJS quaternion from a normal vector.
-		//	This is useful for getting meshes to 'point' in the direction of a vector.
-
-		//	Usage: quat = quaternionFromNormal(normal, [quaternionTarget])
-		//	Builds a quaternion from the normal (a normalized THREE.Vector3), 
-		//	storing the result in quaternionTarget (a THREE.Quaternion) 
-		//	or creating a new quaternion object if no target is specified.
-		//	The quaternion target is returned.
-
-		//	Example:
-		//	Say we want mesh to point from A to B point.
-			//	var A = new THREE.Vector3(1, 0, 0);
-			//	var B = new THREE.Vector3(2, 5,-1);
-		//	Get normal A->B.
-			//	var normal = B.clone().sub(A).normalize();
-		//	Get orientation.
-			//	var quaternion = quaternionFromNormal(normal);
-		//	Apply orientation to mesh.
-			//	mesh.quaternion.copy(quaternion);
-
-			function quaternionFromNormal( normal, quaternion ){
-
-				return setDirection(normal, quaternion);
-
-				function setDirection(normal, quaternion) {
-					quaternion = quaternion || new THREE.Quaternion();
-				//	vector is assumed to be normalized.
-					if (normal.y > 0.99999) {
-						quaternion.set(0, 0, 0, 1);
-					} else if (normal.y < -0.99999) {
-						quaternion.set(1, 0, 0, 0);
-					} else {
-						var axis = new THREE.Vector3();
-						axis.set(normal.z, 0, -normal.x).normalize();
-						var radians = Math.acos(normal.y);
-						quaternion.setFromAxisAngle(axis, radians);
-					}
-
-					return quaternion;
-				}
-			}
-
-		</script>
 
 		<script>
 
@@ -290,27 +152,23 @@
 
 		//	Entities.
 
-			debugMode && (function(){
-				var r = 1;
-				var geometry = new THREE.BoxGeometry(r,r,r);
-				var material = new THREE.MeshLambertMaterial();
-				var cube = new THREE.Mesh(geometry, material);
-				cube.name = "local player cube";
+		//	debugMode && (function(){
+			//	var r = 1;
+			//	var geometry = new THREE.BoxGeometry(r,r,r);
+			//	var material = new THREE.MeshLambertMaterial();
+			//	var cube = new THREE.Mesh(geometry, material);
+			//	cube.name = "local player cube";
 			//	var geometry = new THREE.SphereGeometry(0.7,8,12);
 			//	var material = new THREE.MeshLambertMaterial();
 			//	var sphere = new THREE.Mesh(geometry, material);
 			//	sphere.name = "local player sphere";
 			//	cube.add( sphere );
-				localPlayer.add( cube );
-			})();
-
-		</script>
-
-		<script>
+			//	localPlayer.add( cube );
+		//	})();
 
 		//	box coluctions.
 
-			(function(){
+			debugMode && (function(){
 
 				var material = new THREE.MeshLambertMaterial();
 
@@ -328,6 +186,7 @@
 					segments.name = "segments 2";
 					segments.position.copy( mesh.position );
 					scene.add( mesh );
+					cameraControls.rigidObjects.push( mesh );
 				})();
 
 				(function(){
@@ -360,6 +219,7 @@
 					segments.name = "segments 4";
 					segments.position.copy( mesh.position );
 					scene.add( mesh );
+					cameraControls.rigidObjects.push( mesh );
 				})();
 
 				(function(){
@@ -376,6 +236,7 @@
 					segments.name = "segments 5";
 					segments.position.copy( mesh.position );
 					scene.add( mesh );
+					cameraControls.rigidObjects.push( mesh );
 				})();
 
 				(function(){
@@ -392,6 +253,7 @@
 					segments.name = "segments 6";
 					segments.position.copy( mesh.position );
 					scene.add( mesh );
+					cameraControls.rigidObjects.push( mesh );
 				})();
 
 			})();
