--- a/engine/pre-alpha/16 (editor tab)/index.html
+++ b/engine/pre-alpha/16 (editor tab)/index.html
@@ -136,7 +136,7 @@
 
 		</script>
 
-		<script src="/ecs/engine/Enviroment.js"></script>
+		<script src="/ecs/engine/core/enviroment.js"></script>
 		<script src="/ecs/engine/core/entity.js"></script>
 		<script src="/ecs/engine/core/helpers.js"></script>
 		<script src="/ecs/engine/core/localPlayer.js"></script>
