Replace with core/enviroment.js, core/entity.js
Replace  "/ecs/engine/Enviroment.js",
"/ecs/engine/pre-alpha/Entity.js",
"/ecs/engine/pre-alpha/EntityManager.js"
with "/ecs/engine/core/enviroment.js",
"/ecs/engine/core/entity.js"

--- a/engine/pre-alpha/12/index.html
+++ b/engine/pre-alpha/12/index.html
@@ -101,7 +101,7 @@
 		<script src="/threejs/r96/examples/js/exporters/OBJExporter.js"></script>
 		<script src="/threejs/r96/examples/js/exporters/ColladaExporter.js"></script>
 
-		<script src="/ecs/engine/Enviroment.js"></script>
+		<script src="/ecs/engine/core/enviroment.js"></script>
 		<script src="/ecs/engine/core/localPlayer.js"></script>
 		<script src="/ecs/engine/core/cameraControls.js"></script>
 		<script src="/ecs/engine/core/keyboardState.js"></script>
