--- a/engine/pre-alpha/08/index.html
+++ b/engine/pre-alpha/08/index.html
@@ -101,9 +101,7 @@
 
 		<script src="/ecs/js/tiny-ecs.js"></script>
 		<script src="/ecs/js/KeyboardState.js"></script>
-		<script src="/ecs/engine/Enviroment.js"></script>
-		<!--script src="/ecs/engine/pre-alpha/Entity.js"></script-->
-		<!--script src="/ecs/engine/pre-alpha/EntityManager.js"></script-->
+		<script src="/ecs/engine/core/enviroment.js"></script>
 
 		<script>
 
